--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,15 +15,15 @@ jobs:
       - uses: actions/checkout@v4.1.1
         with:
           sparse-checkout: .
-      # azure-identity doesn't support GitHub WIF yet
-      - name: login with workload identity federation
-        uses: nicolonsky/WIF@v0.0.2
-        with:
-          tenant_id: ${{ vars.AZURE_TENANT_ID }}
-          client_id: ${{ vars.AZURE_CLIENT_ID }}
       - uses: actions/setup-python@v5.0.0
         with:
           cache: pip
       - run: pip install -r requirements.txt
+      # azure-identity doesn't support GitHub WIF yet
+      - run: echo "${{ github.token }}" > ../token
       - run: python main.py
+        env:
+          AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
+          AZURE_FEDERATED_TOKEN_FILE: ../token
       - uses: EndBug/add-and-commit@v9.1.4
