--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,15 @@ jobs:
       - uses: actions/checkout@v4.1.1
         with:
           sparse-checkout: .
+      # azure-identity doesn't support GitHub WIF
+      uses: azure/login@v1
+      with:
+        tenant-id: ${{ env.AZURE_TENANT_ID }}
+        client-id: ${{ env.AZURE_CLIENT_ID }}
+        allow-no-subscriptions: true
       - uses: actions/setup-python@v5.0.0
         with:
           cache: pip
       - run: pip install -r requirements.txt
-      # azure-identity doesn't support GitHub WIF yet
-      - run: echo ${{ github.token }} > ../token
-      - run: cat ../token
       - run: python main.py
-        env:
-          AZURE_AUTHORITY_HOST: login.microsoftonline.com
-          AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-          AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-          AZURE_FEDERATED_TOKEN_FILE: ../token
       - uses: EndBug/add-and-commit@v9.1.4
