fix: az login vars
Signed-off-by: Tom Plant <tom@tplant.com.au>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       # azure-identity doesn't support GitHub WIF
       - uses: azure/login@v1
         with:
-          tenant-id: ${{ env.AZURE_TENANT_ID }}
-          client-id: ${{ env.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
           allow-no-subscriptions: true
       - uses: actions/setup-python@v5.0.0
         with:
