fix: add python version for pip caching
Signed-off-by: Tom Plant <tom@tplant.com.au>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
           allow-no-subscriptions: true
       - uses: actions/setup-python@v5.0.0
         with:
+          python-version: 3.12
           cache: pip
       - run: pip install -r requirements.txt
       - run: python main.py
