fix: use dev environment for federated auth

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
+    environment: dev
     permissions:
       id-token: write # Graph auth
       contents: write # committing
