--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       contents: write # committing
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ github.head_ref }}
       # azure-identity doesn't support GitHub WIF
       - uses: azure/login@a65d910e8af852a8061c627c456678983e180302 # v2.2.0
         with:
