fix: check for changes hourly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Refresh data
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # daily
+    - cron: "0 * * * *" # hourly
   pull_request:
     types: [opened, synchronize, reopened]
 
