--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
           AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
           AZURE_CHANGEMGMT_RT: ${{ secrets.AZURE_CHANGEMGMT_RT }}
           AZURE_INTUNEPORTAL_RT: ${{ secrets.AZURE_INTUNEPORTAL_RT }}
+          AZURE_OCPS_RT: ${{ secrets.AZURE_OCPS_RT }}
       - uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5 # v9.1.4
         with:
           default_author: github_actions
