feat: add Teams and M365 Admin Centers
Signed-off-by: Tom Plant <tom@tplant.com.au>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
           AZURE_CHANGEMGMT_RT: ${{ secrets.AZURE_CHANGEMGMT_RT }}
           AZURE_INTUNEPORTAL_RT: ${{ secrets.AZURE_INTUNEPORTAL_RT }}
           AZURE_OCPS_RT: ${{ secrets.AZURE_OCPS_RT }}
+          AZURE_TEAMS_RT: ${{ secrets.AZURE_TEAMS_RT }}
       - uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5 # v9.1.4
         with:
           default_author: github_actions
