--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
       - id: inference
         if: steps.prompt.outputs.changed == '1'
         continue-on-error: true
-        uses: actions/ai-inference@main
+        uses: actions/ai-inference@v1
         with:
           prompt-file: ../prompt
           model: ${{ vars.MODEL }}
